<resources>
    <string name="app_name">TCC</string>
    <string name="login">Login</string>
    <string name="entrar">Entrar</string>
    <string name="senha">Senha</string>
    <string name="texto_1">Texto_1</string>
    <string name="texto_2">texto 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="s_produto_presente">O produto está presente na loja?</string>
    <string name="preco">Preço do produto</string>
    <string name="digite_o_valor">Digite o valor</string>
    <string name="gravar">Gravar</string>
    <string name="quantidade_de_frentes">Quantidade de frentes</string>
    <string name="estoque">Estoque</string>
    <string name="cancelar">Cancelar</string>
    <string name="msg_campo_obrigatorio">Campo obrigatório</string>
    <string name="msg_valor_maior_zero">O valor precisa ser maior que ZERO.</string>
    <string name="coleta_produto">Coleta Produto</string>
    <string name="jutificativa">Justificativa</string>
    <string name="roteiro_alerta_checkout">Para realizar o CHECKIN é preciso realizar a transmissão da loja em aberto.</string>
    <string name="roteiro_enviado">Pesquisa já enviada!</string>

    <!-- TASK MSG LOADING -->
    <string name="login_loading_validando">Buscando informações... aguarde!</string>

    <!-- ERROS -->
    <string name="erro_dados">Erro ao obter os dados.</string>
    <string name="erro_400">Erro 400: Falha na comunicação com servidor.</string>
    <string name="erro_401">Erro 401: Falha de autenticação.</string>
    <string name="erro_403">Erro 403: Acesso não autorizado.</string>
    <string name="erro_404">Erro 404: Arquivo de acesso não encontrado.</string>
    <string name="erro_500">Erro 500: Servidor não responde.</string>
    <string name="erro_502">Erro 502: Falha no Gateway.</string>
    <string name="erro_503">Erro 503: Serviço não disponível.</string>
    <string name="erro_504">Erro 504: Servidor sem resposta.</string>
    <string name="erro_default">Erro _CODE: Erro desconhecido.</string>
    <string name="erro_foto">Foto não encontrada.</string>
    <string name="erro_lista">Lista vazia.</string>
    <string name="erro_conexao">Verifique sua conexão ou tente novamente!</string>
    <string name="erro_servidor_expirado">Pedido ao servidor expirado. Verifique com o administrador!</string>
    <string name="erro_arquivo_nao_encontrado">Arquivo não encontrado</string>
    <string name="erro_erro_banco">Ocorreu um erro no banco interno SQLite.</string>
    <string name="erro_campo_formatacao">Verifique o campo digitado, e insira a formatação solicitada!</string>
    <string name="erro_nao_identificado">Ocorreu um erro não identificado</string>
    <string name="erro_data_pesquisa">Dados de pesquisa não localizado.</string>
    <string name="erro_data_pesquisa_pendente">Dados de pesquisa não localizado.</string>

    <!-- PERMISSOES -->
    <string name="msg_permissao">Para que o aplicativo funcione corretamente você precisa conceder acesso:</string>
    <string name="msg_permissao_alerta">Para prosseguir, é preciso permitir alguns permissões!</string>
    <string name="permission_audio">AUDIO</string>
    <string name="permission_sd_card_escrita">SD CARD ESCRITA</string>
    <string name="permission_sd_card_leitura">SD CARD LEITURA</string>
    <string name="permission_camera">CAMERA</string>
    <string name="permission_localizacao">LOCALIZAÇÃO</string>
    <string name="permission_telefone">TELEFONE</string>
    <string name="permission_internet">INTERNET</string>

    <!-- BOTOES -->
    <string name="btn_ok">OK</string>
    <string name="btn_fechar">Fechar</string>
    <string name="btn_cancelar">Cancelar</string>

    <!-- MENSAGENS PADRÃO TITULO -->
    <string name="msg_erro">Erro</string>
    <string name="msg_resetar">Resetar</string>
    <string name="msg_pesquisa">Pesquisa</string>
    <string name="msg_atencao">Atenção</string>
    <string name="transmissao_msg_envio">Deseja enviar os dados?</string>

    <string name="roteiro_atualizado_sincronizacao">Já existe roteiro atualizado para hoje, deseja sincronizar novamente?\n\nSe "SIM", os dados já coletados serão apagados!</string>
    <string name="msg_erro_foto_envio_transmissao"><![CDATA[Erro ao enviar a foto.<br/> Indicador: _DATA.<br/><br/>Verifique na coleta se a mesma esta visível.]]></string>
    <string name="erro_internet">Ocorreu uma falha na sua conexão com a internet. Favor tente novamente</string>
    <string name="erro_pesquisa">Erro ao enviar dados da pesquisa. Favor tente novamente.</string>

    <!--MANIPULACAO LOADING-->
    <string name="sincronizando">Sincronizando...</string>
    <string name="envio_dados">Enviando os dados...</string>
    <string name="manipulacao">Atualizando _TIPO %1$s de %2$s...</string>
    <string name="manipulacao_fotos">Enviando as Fotos %1$s de %2$s...</string>
    <string name="manipulacao_fotos_envio">Enviando as Fotos...</string>

    <!-- PESQUISA -->
    <string name="coleta">Coleta</string>
    <string name="pesquisa_sistema">Pesquisa - _LOJA</string>
    <string name="pesquisa">Pesquisa</string>
    <string name="erro_pesquisa_json_foto">Erro ao enviar as Fotos</string>
    <string name="erro_pesquisa_json">Erro ao enviar os dados da Pesquisa</string>
    <string name="pesquisa_ja_realizada">Pesquisa já realizada!</string>
    <string name="pendente_preenchimento">Indicadores pendentes de Preenchimento.\n\n</string>
    <string name="enviar_pesquisa">Enviar Pesquisa</string>
    <string name="enviar_pesquisa_corpo">Deseja enviar a Pesquisa?</string>
    <string name="enviando_dados">Enviando os Dados...</string>

</resources>